[project]
name = "dsa-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.13",
    "colorama>=0.4.6",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-ollama>=0.3.3",
    "markdown>=3.8.2",
    "python-dotenv>=1.1.1",
    "textual>=3.5.0",
    "textual-dev>=1.7.0",
    "typer>=0.16.0",
]
